Update CV adding FONTYOU.

--- a/CV_Fr_Nicolas_REY.tex
+++ b/CV_Fr_Nicolas_REY.tex
@@ -41,7 +41,7 @@
 
 \firstname{Nicolas}
 \familyname{Rey}
-\title{ }
+% \title{}
 \address{76 rue de l'Ouest}{75014 Paris}
 \mobile{+33 6 87 05 60 19}
 \email{contact@lateral-thoughts.com}
@@ -58,7 +58,11 @@
 
 \section{Expériences}
 % \cventry{}{}{}{}{}{}
-\cventry{Déc. 2012 - Mai 2013\\6 mois}{Développement d'un système de notification en client lourd}{Vidal}{Paris}{}{
+\cventry{Mai 2013 - Déc. 2013\\6.5 mois}{Développement d'une web app de co-création de polices}{FONTYOU}{Paris}{}{
+	Scala, Play2!, MongoDB, Javascript, RequireJS, BackboneJS, MarionetteJS, HTML5/CSS3, LessCSS.\\
+	Méthodes AGILE : SCRUM.
+}
+\cventry{Déc. 2012 - Mai 2013\\6.5 mois}{Développement d'un système de notification en client lourd}{Vidal}{Paris}{}{
 	Scala, Akka, SWT, Javascript, HTML/CSS.\\
 	Méthodes AGILE : SCRUM.
 }
@@ -69,9 +73,9 @@
 \cventry{Avril - Sept. 2012\\6 mois}{Stage de fin d'études - Développement Web/Mobile}{Eklaweb}{Nantes}{}{
   Développement d'applications mobiles HTML5 avec Backbone.js.\\
   Serveur : Scala, Unfiltered, Play2!, MongoDB, PostgreSQL.\\
-  Articles sur le blog technique d'Eklaweb : "Gestion des dates en informatique".
+  Article sur le blog technique d'Eklaweb : "Gestion des dates en informatique".
 }
-\cventry{2011 - 2012}{Projets d'école}{}{Nantes}{France}{Java, Conception de bases de données, Programmation parallèle.}
+% \cventry{2011 - 2012}{Projets d'école}{}{Nantes}{France}{Java, Conception de bases de données, Programmation parallèle.}
 
 \cventry{Mai à août 2011\\4 mois}{Stage ingénieur en développement mobile}{Amadeus}{Bangalore}{Inde}{
   Application iPad pour valider la maturité du développement mobile HTML5.\\
@@ -83,9 +87,9 @@
 
 \section{Compétences en informatique}
 \cvcomputer{Langages}{Scala, Java, JavaScript}{SGBD}{PostgreSQL, MongoDB}
-\cvcomputer{Frontend}{Backbone.js}{Backend}{Play2!, Spring}
-\cvcomputer{Dév. Web}{HTML5/CSS3, API RESTful, Unfiltered, Play2!}{Mobile}{PhoneGap}
-\cvcomputer{OS}{GNU/Linux : Ubuntu, Fedora}{Outils}{Git, Maven/SBT, TDD, \LaTeX, UML}
+\cvcomputer{Frontend}{RequireJS, Backbone/MarionetteJS, Less}{Backend}{Play2!, Spring, Unfiltered}
+\cvcomputer{Dév. Web}{HTML5/CSS3, API RESTful}{Mobile}{PhoneGap}
+\cvcomputer{OS}{GNU/Linux : Debian, Fedora, ArchLinux}{Outils}{Git, Maven/SBT, TDD, \LaTeX, UML}
 
 \section{Langues}
 \cvlanguage{Anglais}{Courant (ToEIC : 885)}{Travail en Anglais, 4 mois de stage en Inde, 6 séjours en Afrique du Sud}
