--- a/CV_Fr_Nicolas_REY.tex
+++ b/CV_Fr_Nicolas_REY.tex
@@ -24,7 +24,7 @@
 \ifpdf
 	\pdfinfo {
 		/Author (Nicolas REY)
-		/Title (Nicolas REY - Développeur Backend / Frontend)
+		/Title (Nicolas REY - Développeur Scala)
 		/Subject (SUBJECT)
 		/Keywords (KEYWORDS)
 %		/CreationDate (D:20110109220854)
@@ -47,11 +47,11 @@
 
 \firstname{Nicolas}
 \familyname{Rey}
-\title{Développeur backend/frontend}
+\title{Développeur Scala}
 \address{76 rue de l'Ouest}{75014 Paris}
 \mobile{+33 6 26 09 05 07}
 \email{contact@lateral-thoughts.com}
-\extrainfo{28 ans, Célibataire, Permis B, Pilote UML 3 axes}
+\extrainfo{28 ans, Célibataire, Permis B, Pilote ULM 3 axes}
 
 
 \begin{document}
@@ -71,13 +71,13 @@
 \section{Informatique}
 \begin{tabular}{ll}
   \vspace{0.1cm}
-  \hspace{0.1cm} Langages & \hspace{0.5cm} \textbf{Scala}, Java, Javascript \\ \vspace{0.1cm}
-  \hspace{0.1cm} Ecosystème Scala & \hspace{0.5cm} Play 2!, Spark, Akka \\ \vspace{0.1cm}
+  \hspace{0.1cm} Langages & \hspace{0.5cm} \textbf{Scala}, Java, JavaScript \\ \vspace{0.1cm}
+  \hspace{0.1cm} Ecosystème Scala & \hspace{0.5cm} Play 2!, Spark, Akka, Spray, Kafka (débutant), Avro \\ \vspace{0.1cm}
   \hspace{0.1cm} Ecosystème Java & \hspace{0.5cm} Spring (MVC, Core), Jersey \\ \vspace{0.1cm}
-  \hspace{0.1cm} Ecosystème Javascript/Web & \hspace{0.5cm} ReactJS, BackboneJS, RequireJS, Browserify, Bootstrap, HTML5/CSS3 \\ \vspace{0.1cm}
+  \hspace{0.1cm} Ecosystème JavaScript/Web & \hspace{0.5cm} ReactJS, BackboneJS, RequireJS, Browserify, Bootstrap, HTML5/CSS3 \\ \vspace{0.1cm}
   \hspace{0.1cm} Environnement de Test & \hspace{0.5cm} Scalatest, Junit, Mockito, Cucumber \\ \vspace{0.1cm}
   \hspace{0.1cm} Intégration & \hspace{0.5cm} SBT, Maven, Jenkins, Git, Github \\ \vspace{0.1cm}
-  \hspace{0.1cm} Bases de Données & \hspace{0.5cm} SQL, MongoDB \\ \vspace{0.1cm}
+  \hspace{0.1cm} Bases de Données & \hspace{0.5cm} SQL, MongoDB, Cassandra \\ \vspace{0.1cm}
   \hspace{0.1cm} Administration & \hspace{0.5cm} GNU/Linux, Ansible, Vagrant, Docker \\ \vspace{0.1cm}
   \hspace{0.1cm} Documents & \hspace{0.5cm} \LaTeX, Beamer \\ \vspace{0.1cm}
 \end{tabular}
@@ -87,7 +87,24 @@
 \newpage
 \section{Expériences}
 % \cventry{}{}{}{}{}{}
-\cventry{2014 - 2015\\1 an}{Ingénieur Développeur Java}{Vidal}{Paris}{}{
+\cventry{2012 - 2016\\3,5 ans}{Ingénieur Développeur Scala/Java}{Lateral Thoughts}{Paris}{}{
+  \small Prestations de développement \\
+  \textbf{Environnement :} \textit{\textbf{Scala}, Java, JavaScript, Play2!, Akka, Spark, MongoDB, Cassandra, Kafka, SQL}
+  \bigskip
+}
+\cventry{2015 - 2016\\5 mois}{Ingénieur Développeur Scala - SMACK}{Carrefour}{Paris}{}{
+  \small Développement de la plateforme big data de Carrefour
+  \medskip
+  \begin{itemize}
+    \item Développement de la plate-forme big data
+    \item Ingestion, transformation et mise à disposition en temps réel de multiples sources de données
+  \end{itemize}
+  \medskip
+  \textbf{Environnement :} \textit{\textbf{Scala}, Spark, Mesos, Akka, Cassandra, Kafka, HDFS, Cloudera, Spray, Avro} \\
+  \textbf{Gestion de projet :} \textit{Agile / Scrum}
+  \bigskip
+}
+\cventry{2014 - 2015\\1 an}{Ingénieur Développeur Scala/Java}{Vidal}{Paris}{}{
 	\small Développement d'APIs REST HATEOAS
 	\medskip
   \begin{itemize}
@@ -130,11 +147,11 @@
   \end{itemize}
   \medskip
   \textbf{Environnement Backend :} \textit{Java, Guava, Spring Core, Spring MVC, Fluentlenium} \\
-  \textbf{Environnement Frontend :} \textit{Javascript, ReactJS, Browserify, Gulp} \\
+  \textbf{Environnement Frontend :} \textit{JavaScript, ReactJS, Browserify, Gulp} \\
   \textbf{Gestion de projet :} \textit{Agile / Scrum}
   \bigskip
 }
-\cventry{2013\\6.5 mois}{Ingénieur Développeur Scala}{FONTYOU}{Paris}{}{
+\cventry{2013\\7 mois}{Ingénieur Développeur Scala}{FONTYOU}{Paris}{}{
 	\small Développement d'une web app de co-création de polices pour une satrtup
 	\medskip
   \begin{itemize}
@@ -146,11 +163,11 @@
   \end{itemize}
   \medskip
   \textbf{Environnement Backend :} \textit{\textbf{Scala}, Play2!, MongoDB, Zabbix} \\
-  \textbf{Environnement Frontend :} \textit{Javascript, BackboneJS, RequireJS, HTML5/CSS3, LessCSS} \\
+  \textbf{Environnement Frontend :} \textit{JavaScript, BackboneJS, RequireJS, HTML5/CSS3, LessCSS} \\
   \textbf{Gestion de projet :} \textit{Agile / Scrum}
   \bigskip
 }
-\cventry{2012 - 2013\\6.5 mois}{Ingénieur Développeur Scala}{Vidal}{Paris}{}{
+\cventry{2012 - 2013\\7 mois}{Ingénieur Développeur Scala}{Vidal}{Paris}{}{
 	\small Développement d'un client lourd
 	\medskip
   \begin{itemize}
@@ -158,7 +175,7 @@
     \item Gestion de l'expiration et du renouvellement de la license des clients
   \end{itemize}
   \medskip
-  \textbf{Environnement :} \textit{\textbf{Scala}, Akka, SWT, Javascript, HTML/CSS} \\
+  \textbf{Environnement :} \textit{\textbf{Scala}, Akka, SWT, JavaScript, HTML/CSS} \\
   \textbf{Gestion de projet :} \textit{Agile / Scrum}
   \bigskip
 }
@@ -190,7 +207,7 @@
 \cvline{Mars 2009}{Vice-président d'une liste aux élections du Bureau Des Sports de l'ECN.}
 
 \section{Centres d'intérêt}
-\cvline{Informatique}{Logiciels libres, programmation fonctionnelle}
+\cvline{Informatique}{Logiciels libres, programmation fonctionnelle.}
 \cvline{Loisirs}{Salsa et autres danses latines, Veille technologique, Bières.}
 \cvline{Voyages}{17 ans à Libreville (Gabon), Road trips en Europe (10 pays), 4 mois en Inde.}
 
