Update CV to leave Carrefour

--- a/CV_Fr_Nicolas_REY.tex
+++ b/CV_Fr_Nicolas_REY.tex
@@ -64,8 +64,9 @@
 
 \vspace{0.5cm}
 \section{Langues}
-\cvlanguage{Anglais}{Courant (ToEIC : 885)}{Travail en Anglais, 4 mois de stage en Inde, 6 séjours en Afrique du Sud}
+\cvlanguage{Anglais}{Courant (ToEIC : 885)}{Travail en Anglais, stage en Inde (4 mois), Afrique du Sud (6 séjours)}
 \cvlanguage{Espagnol}{Notions}{}
+\cvlanguage{Russe}{Notions}{}
 
 \vspace{0.5cm}
 \section{Informatique}
@@ -92,17 +93,15 @@
   \textbf{Environnement :} \textit{\textbf{Scala}, Java, JavaScript, Play2!, Akka, Spark, MongoDB, Cassandra, Kafka, SQL}
   \bigskip
 }
-\cventry{2015 - 2016\\5 mois}{Ingénieur Développeur Scala - SMACK}{Carrefour}{Paris}{}{
+\cventry{2015 - 2016\\5 mois}{Ingénieur Développeur Scala - Big Data - SMACK}{Carrefour}{Paris}{}{
   \small Développement de la plateforme big data de Carrefour
   \medskip
   \begin{itemize}
-    \item Développement de la plate-forme big data
+    \item Développement du data lake
     \item Ingestion, transformation et mise à disposition en temps réel de multiples sources de données
   \end{itemize}
   \medskip
   \textbf{Environnement :} \textit{\textbf{Scala}, Spark, Mesos, Akka, Cassandra, Kafka, HDFS, Cloudera, Spray, Avro} \\
-  \textbf{Gestion de projet :} \textit{Agile / Scrum}
-  \bigskip
 }
 \cventry{2014 - 2015\\1 an}{Ingénieur Développeur Scala/Java}{Vidal}{Paris}{}{
 	\small Développement d'APIs REST HATEOAS
@@ -197,7 +196,7 @@
 %\cventry{}{}{}{}{}{}
 
 
-\newpage
+% \newpage
 \section{Projets personnels}
 \cventry{2015}{Serveur Personnel}{}{}{\small Installation d'un serveur avec Ansible}{\textit{Ansible, Nginx, OwnCloud, GitLab, Linux Debian}}
 \cventry{2015}{Ordinateur Personnel}{}{}{\small Automatisation de l'installation et de la configuration de mes ordinateurs avec Ansible}{}
