Update pour le Canada

--- a/CV_Fr_Nicolas_REY.tex
+++ b/CV_Fr_Nicolas_REY.tex
@@ -24,7 +24,7 @@
 \ifpdf
 	\pdfinfo {
 		/Author (Nicolas REY)
-		/Title (Nicolas REY - Développeur Scala)
+		/Title (Nicolas REY - Développeur Scala - Big Data)
 		/Subject (SUBJECT)
 		/Keywords (KEYWORDS)
 %		/CreationDate (D:20110109220854)
@@ -47,11 +47,11 @@
 
 \firstname{Nicolas}
 \familyname{Rey}
-\title{Développeur Scala}
+\title{Développeur Scala - Big Data}
 \address{76 rue de l'Ouest}{75014 Paris}
 \mobile{+33 6 26 09 05 07}
-\email{contact@lateral-thoughts.com}
-\extrainfo{28 ans, Célibataire, Permis B, Pilote ULM 3 axes}
+\email{nicolas.rey.3k.pro@gmail.com}
+\extrainfo{29 ans, Célibataire, Permis B, Pilote ULM 3 axes}
 
 
 \begin{document}
@@ -72,15 +72,14 @@
 \section{Informatique}
 \begin{tabular}{ll}
   \vspace{0.1cm}
-  \hspace{0.1cm} Langages & \hspace{0.5cm} \textbf{Scala}, Java, JavaScript \\ \vspace{0.1cm}
-  \hspace{0.1cm} Ecosystème Scala & \hspace{0.5cm} Play 2!, Spark, Akka, Spray, Kafka (débutant), Avro \\ \vspace{0.1cm}
-  \hspace{0.1cm} Ecosystème Java & \hspace{0.5cm} Spring (MVC, Core), Jersey \\ \vspace{0.1cm}
-  \hspace{0.1cm} Ecosystème JavaScript/Web & \hspace{0.5cm} ReactJS, BackboneJS, RequireJS, Browserify, Bootstrap, HTML5/CSS3 \\ \vspace{0.1cm}
-  \hspace{0.1cm} Environnement de Test & \hspace{0.5cm} Scalatest, Junit, Mockito, Cucumber \\ \vspace{0.1cm}
-  \hspace{0.1cm} Intégration & \hspace{0.5cm} SBT, Maven, Jenkins, Git, Github \\ \vspace{0.1cm}
-  \hspace{0.1cm} Bases de Données & \hspace{0.5cm} SQL, MongoDB, Cassandra \\ \vspace{0.1cm}
-  \hspace{0.1cm} Administration & \hspace{0.5cm} GNU/Linux, Ansible, Vagrant, Docker \\ \vspace{0.1cm}
-  \hspace{0.1cm} Documents & \hspace{0.5cm} \LaTeX, Beamer \\ \vspace{0.1cm}
+  \hspace{0.1cm} Langages & \hspace{0.5cm} \textbf{Scala}, Java, JavaScript, Bash (bases) \\ \vspace{0.1cm}
+  \hspace{0.1cm} Ecosystème Big Data & \hspace{0.5cm} Spark, Kafka, HDFS, Cloudera \\ \vspace{0.1cm}
+  \hspace{0.1cm} Ecosystème Scala & \hspace{0.5cm} Play 2!, Akka (débutant) \\ \vspace{0.1cm}
+  \hspace{0.1cm} Ecosystème Java & \hspace{0.5cm} Spring (MVC, Core) \\ \vspace{0.1cm}
+  \hspace{0.1cm} Ecosystème Web & \hspace{0.5cm} ReactJS, Bootstrap, HTML5/CSS3 \\ \vspace{0.1cm}
+  \hspace{0.1cm} Intégration & \hspace{0.5cm} SBT, Maven, Jenkins, Git \\ \vspace{0.1cm}
+  \hspace{0.1cm} Bases de Données & \hspace{0.5cm} Cassandra, MongoDB \\ \vspace{0.1cm}
+  \hspace{0.1cm} Administration & \hspace{0.5cm} GNU/Linux, Ansible, Docker, Vagrant \\ \vspace{0.1cm}
 \end{tabular}
 
 
@@ -90,18 +89,32 @@
 % \cventry{}{}{}{}{}{}
 \cventry{2012 - 2016\\3,5 ans}{Ingénieur Développeur Scala/Java}{Lateral Thoughts}{Paris}{}{
   \small Prestations de développement \\
-  \textbf{Environnement :} \textit{\textbf{Scala}, Java, JavaScript, Play2!, Akka, Spark, MongoDB, Cassandra, Kafka, SQL}
+  \textbf{Environnement :} \textit{\textbf{Scala}, Java, \textbf{Spark}}
   \bigskip
 }
-\cventry{2015 - 2016\\5 mois}{Ingénieur Développeur Scala - Big Data - SMACK}{Carrefour}{Paris}{}{
+\cventry{2016 - 2017\\7 mois}{Ingénieur Développeur Scala - Big Data}{Pages Jaunes}{Paris}{}{
+  \small Refonte des applications des données des audiences de Pages Jaunes avec Spark
+  \medskip
+  \begin{itemize}
+    \item Développement de plusieurs applications d'ingestion et de valorisation de données
+    \item Mise en place de l'usine logicielle (Jenkins, Sonatype Nexus)
+    \item DevOps : gestion de l'installation (Ansible), et du bon fonctionnement de l'appli
+    \item Formation de l'équipe aux pratiques Agile, à Scala et à Spark
+  \end{itemize}
+  \medskip
+  \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, HDFS, Cloudera, Avro, Parquet} \\
+  \textbf{Gestion de projet :} \textit{Agile}
+  \bigskip
+}
+\cventry{2015 - 2016\\10 mois}{Ingénieur Développeur Scala - Big Data - SMACK}{Carrefour}{Paris}{}{
   \small Développement de la plateforme big data de Carrefour
   \medskip
   \begin{itemize}
-    \item Développement du data lake
-    \item Ingestion, transformation et mise à disposition en temps réel de multiples sources de données
+    \item Développement du data lake temps réel : ingestion et enrichissement des données
+    \item Développement des API d'accès à ces données
   \end{itemize}
   \medskip
-  \textbf{Environnement :} \textit{\textbf{Scala}, Spark, Mesos, Akka, Cassandra, Kafka, HDFS, Cloudera, Spray, Avro} \\
+  \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, Mesos, Akka, Cassandra, Kafka, HDFS, Cloudera, Spray, Avro} \\
 }
 \cventry{2014 - 2015\\1 an}{Ingénieur Développeur Scala/Java}{Vidal}{Paris}{}{
 	\small Développement d'APIs REST HATEOAS
@@ -114,27 +127,13 @@
   \textbf{Environnement :} \textit{Java, Guava, Spring, Hibernate, Cucumber, Github, Docker, Ansible, Vagrant} \\
   \textbf{Gestion de projet :} \textit{Agile / Scrum} \\
   \\
-	\small Développement d'un outil de pilotage de mises à jour
+	\small Développement d'un outil de pilotage de mises à jour d'un client lourd
 	\medskip
   \begin{itemize}
-    \item Gestion du téléchargement et de l'installation des mises à jour d'APIs chez les clients
-    \item Pings de notifications de l'état d'avancement
+    \item Machine à état développée en Akka
   \end{itemize}
   \medskip
   \textbf{Environnement :} \textit{\textbf{Scala}, Akka, Github}
-  \bigskip
-}
-\cventry{2014}{Ingénieur Développeur Scala}{Projet personnel}{Paris}{}{
-	\small Développement du site web d'un hôtel/restaurant de Libreville (Gabon)
-	\medskip
-  \begin{itemize}
-    \item Développement backend et frontend, et intégration du design
-    \item Sémentisation du site avec des microdata.
-    \item Administration du serveur
-  \end{itemize}
-  \medskip
-  \textbf{Environnement :} \textit{\textbf{Scala}, Play2!, MongoDB, Javascript, Bootstrap} \\
-  \textbf{Site :} \textit{\href{www.garden-caffe.com}{www.garden-caffe.com}}
   \bigskip
 }
 \cventry{2014\\9 mois}{Ingénieur Développeur Java}{SACEM}{Paris}{}{
@@ -154,9 +153,8 @@
 	\small Développement d'une web app de co-création de polices pour une satrtup
 	\medskip
   \begin{itemize}
-    \item Très polyvalent car seulement deux développeurs pour tout faire
-    \item Développement du serveur
-    \item Développement du frontend navigateur, intégration HTML5/CSS3
+    \item Développement des API en Scala, Play2!, MongoDB
+    \item Développement du front en JavaScript / BackboneJS, intégration HTML5/CSS3
     \item Administration système, gestion de l'usine logicielle et de la prod
     \item Développement d'un POC d'un logiciel de dessin vectoriel dans le navigateur
   \end{itemize}
@@ -166,18 +164,18 @@
   \textbf{Gestion de projet :} \textit{Agile / Scrum}
   \bigskip
 }
-\cventry{2012 - 2013\\7 mois}{Ingénieur Développeur Scala}{Vidal}{Paris}{}{
-	\small Développement d'un client lourd
-	\medskip
-  \begin{itemize}
-    \item Développement d'un système de notification installé chez les clients
-    \item Gestion de l'expiration et du renouvellement de la license des clients
-  \end{itemize}
-  \medskip
-  \textbf{Environnement :} \textit{\textbf{Scala}, Akka, SWT, JavaScript, HTML/CSS} \\
-  \textbf{Gestion de projet :} \textit{Agile / Scrum}
-  \bigskip
-}
+% \cventry{2012 - 2013\\7 mois}{Ingénieur Développeur Scala}{Vidal}{Paris}{}{
+% 	\small Développement d'un client lourd
+% 	\medskip
+%   \begin{itemize}
+%     \item Développement d'un système de notification installé chez les clients
+%     \item Gestion de l'expiration et du renouvellement de la license des clients
+%   \end{itemize}
+%   \medskip
+%   \textbf{Environnement :} \textit{\textbf{Scala}, Akka, SWT, JavaScript, HTML/CSS} \\
+%   \textbf{Gestion de projet :} \textit{Agile / Scrum}
+%   \bigskip
+% }
 % \cventry{Nov. 2012\\1 mois}{Développement d'APIs REST HATEOAS}{Vidal}{Paris}{}{
 % 	Java, Spring, Hibernate, protocole ATOM. TDD avec JUnit, Mockito.\\
 % 	Méthodes AGILE : SCRUM.
@@ -196,18 +194,14 @@
 %\cventry{}{}{}{}{}{}
 
 
-% \newpage
+\newpage
 \section{Projets personnels}
 \cventry{2015}{Serveur Personnel}{}{}{\small Installation d'un serveur avec Ansible}{\textit{Ansible, Nginx, OwnCloud, GitLab, Linux Debian}}
 \cventry{2015}{Ordinateur Personnel}{}{}{\small Automatisation de l'installation et de la configuration de mes ordinateurs avec Ansible}{}
 
-\section{Engagement associatif}
-\cvline{2009 - 2010}{Trésorier du Club de dégustation de bières.}
-\cvline{Mars 2009}{Vice-président d'une liste aux élections du Bureau Des Sports de l'ECN.}
-
 \section{Centres d'intérêt}
 \cvline{Informatique}{Logiciels libres, programmation fonctionnelle.}
-\cvline{Loisirs}{Salsa et autres danses latines, Veille technologique, Bières.}
+\cvline{Loisirs}{Salsa et autres danses, Veille technologique, photographie.}
 \cvline{Voyages}{17 ans à Libreville (Gabon), Road trips en Europe (10 pays), 4 mois en Inde.}
 
 \closesection{}                   % needed to renewcommands
